<resources>
    <string name="app_name">Студент</string>
    <string name="title_activity_navigation">Студент</string>

    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>

    <string name="action_settings">Настройки</string>

    <!--Строки меню-->
    <string name="menu_item_profile">Профиль</string>
    <string name="menu_item_friends">Друзья</string>
    <string name="menu_item_pm">Личные сообщения</string>
    <string name="menu_item_chat">Чат</string>
    <string name="menu_item_events">События</string>
    <string name="menu_item_works">HELPer</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_map">Карта</string>
    <string name="menu_item_search">Поиск</string>
    <!--/Строки меню-->

    <!--Дефолные значения-->
    <!--Имя пользователя-->
    <string name="menu_header_username">Имя пользователя</string>
    <!--Статус пользователя-->
    <string name="menu_header_user_status">Статус пользователя</string>
    <!--/Дефолтные значения-->

</resources>
