<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/m_profile_s"
            android:title="@string/menu_item_profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/m_friends_s"
            android:title="@string/menu_item_friends" />
        <item
            android:id="@+id/nav_pm"
            android:icon="@drawable/m_pm_s"
            android:title="@string/menu_item_pm" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/m_chat_s"
            android:title="@string/menu_item_chat" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/m_events_s"
            android:title="@string/menu_item_events" />
        <item
            android:id="@+id/nav_works"
            android:icon="@drawable/m_help_s"
            android:title="@string/menu_item_works" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/m_options_s"
            android:title="@string/menu_item_map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/m_options_s"
            android:title="@string/menu_item_settings" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/m_search_s"
            android:title="@string/menu_item_search" />
    </group>
</menu>
